// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultTable renders correctly when \`results\` is empty 1`] = `
<Table
  as="table"
  celled={true}
  compact="very"
  selectable={true}
  sortable={true}
>
  <SortableDataTableHeader
    data={Array []}
    renderHeader={[Function]}
    sort={[Function]}
  />
  <DataTableBody
    renderBody={[Function]}
  />
</Table>
`;

exports[`SearchResultTable renders correctly when \`results\` is not empty 1`] = `
<Table
  as="table"
  celled={true}
  compact="very"
  selectable={true}
  sortable={true}
>
  <SortableDataTableHeader
    data={
      Array [
        Object {
          "_id": "0",
          "field": Object {
            "_id": "0",
            "description": "Test Description",
            "field_type": "test_field",
          },
          "subject": "Test Subject",
          "tab": "Test Tab",
          "value": "Test Value",
        },
      ]
    }
    renderHeader={[Function]}
    sort={[Function]}
  />
  <DataTableBody
    renderBody={[Function]}
  />
</Table>
`;
